--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>jar</packaging>
   <groupId>org.webjars</groupId>
   <artifactId>svg.js</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <name>svg.js</name>
   <description>WebJar for svg.js</description>
   <url>http://webjars.org</url>
@@ -42,7 +42,7 @@
     <url>http://github.com/webjars/svg.js</url>
     <connection>scm:git:https://github.com/webjars/svg.js.git</connection>
     <developerConnection>scm:git:https://github.com/webjars/svg.js.git</developerConnection>
-    <tag>svg.js-1.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
